--- a/PackageDevelop.html
+++ b/PackageDevelop.html
@@ -116,20 +116,19 @@ library(usethis)
 
 ## 1.2. Checa nombre
 
-Antes de iniciar tu paquete, puedes consultar el nombre que le daras en la pagina [CRAN](https://cran.r-project.org/)
+Antes de iniciar tu paquete, puedes consultar el nombre en la página [CRAN](https://cran.r-project.org/)
 
-Para ayudarte, existe la libreria **available** para revisar si tu paquete ya existe en CRAN o en github y si el nombre de tu paquete puede ser ofensivo.
+Para ayudarte, existe el paquete **available** para revisar si tu paquete ya existe en CRAN o en github y si el nombre de tu paquete puede ser ofensivo.
 
 ```r
 install.packages('available')
 library(available)
-available("El nombre de tu paquete")
+available("nombre_paquete")
 ```
 
 Ejemplo con mi paquete:
 
 ```r
-library(available)
 available("spheniscus")
 ```
 Una vez le des enter, te pregunta si quieres que revise por contenido ofensivo, puedes poner **Y**.
@@ -186,7 +185,7 @@ RoxygenNote: 7.1.1
 Creo los archivos:
 - .gitignore
 - .Rbuildignore
-- DESCRIPTIOn
+- DESCRIPTION
 - NAMESPACE
 - README.md
 
@@ -227,9 +226,7 @@ Me abrio el proyecto en otra ventana.
 
 ## 1.2. Git
 
-Si ya tienes instalado git puedes directamente conectar el paquete con tu repositorio.
-
-Primero puedes escribir en tu consola:
+Si ya tienes instalado git puedes directamente conectar el paquete con tu repositorio, escribiendo en tu consola:
 
 ```r
 usethis::use_git()
@@ -263,7 +260,7 @@ Me aparecio
 ```r
 √ Adding files
 √ Making a commit with message 'Initial commit
-* A restart of RStudio is required to activate the Git pane
+ A restart of RStudio is required to activate the Git pane
 Restart now?
 1: Yup
 2: No
@@ -272,19 +269,19 @@ Restart now?
 
 Yo le dije 1: Yup... que es como decir **sipi**
 
-Y se reinicio la sesion
+Y se reinició la sesion
 
 ---
 
 ## 1.3. Github
 
-Otra vez en la consola escribi
+Otra vez en la consola escribí
 
 ```r
 usethis::use_github()
 ```
 
-Me aparecio
+Me apareció
 
 ```r
 i Defaulting to https Git protocol
@@ -307,7 +304,7 @@ Le di 3: I agree
 
 ## 1.4. Github
 
-Me aparecio
+Me apareció
 
 ```r
 √ Adding files
@@ -315,20 +312,20 @@ Me aparecio
 √ Pushing 'master' branch to GitHub and setting 'origin/master' as upstream branch
 √ Opening URL 'https://github.com/...'
 ```
-Y me abrio github
+Y me abrió github
 
 ---
 
 ## 1.4. devtools
 
-Escribi en la consola
+Escribí en la consola
 
 ```r
 devtools::check()
 ```
 
-Y checo la version, plataforma, sesiones y demas.   
-Tardo un poquito.  
+Y reviso la versión, plataforma, sesiones y demás.   
+Tardo un poquito.  ⏳
 
 
 ```r
@@ -349,13 +346,13 @@ Non-standard license specification:
 
 ## 1.5. Licencia
 
-Para sofware la licencia mas comun es **MIT**
+Para sofware la licencia más común es **MIT**
 
 ```r
 usethis::use_mit_license("Mi Nombre")
 ```
 
-Me aparecio esto:
+Me apareció esto:
 
 ```r
 √ Setting License field in DESCRIPTION to 'MIT + file LICENSE'
@@ -364,7 +361,7 @@ Me aparecio esto:
 √ Adding '^LICENSE\\.md$' to '.Rbuildignore'
 ```
 
-Para revisar si funciono
+Para revisar si funcionó
 
 ```r
 devtools::check()
@@ -381,7 +378,8 @@ Tarda un poquito
 
 ## 1.6. metadata
 
-Abre y modifica el documento que dice DESCRIPTION, agregando tus datos
+Abre y modifica el documento que dice DESCRIPTION, agregando tus datos.  
+Esta es la información de contacto si hay problemas con el paquete.  
 
 ```r
 Authors@R:
@@ -391,8 +389,6 @@ Authors@R:
          email = "miriamjlerma@gmail.com",
          comment = c(ORCID = "0000-0002-7632-9289"))
 ```
-
-Esta la información de contacto y de autor o creador.
 
 ---
 
@@ -484,7 +480,7 @@ En mi caso yo le di al script el mismo nombre que a los datos (TDR_raw).
 
 ## 2.1. Documentar datos
 
-Una vez creado el archivo **.rda** y **.R** se puede revisar si funciono usando funciones del paquete **devtools**
+Una vez creado el archivo **.rda** y **.R** se puede revisar si funcionó usando funciones del paquete **devtools**
 
 ```r
 devtools::check()
@@ -560,7 +556,8 @@ background-size: cover
 
 # 3. Función con dependencia
 
-Muchos paquetes incluyen ademas de datos funciones.  
+Para este paso deberías tener alguna función en mente.  
+
 Si aún no sabes como crear tu primera función puedes ir a [r4ds](https://r4ds-en-espaniol.netlify.app/funciones.html).  
 
 La estructura es algo así:
@@ -576,7 +573,7 @@ nombre_de_la_funcion&lt;-function(argumentos){
 
 ## 3.1. Probar función
 
-Yo probe mi función con mis datos de ejemplo, antes de incluirla en el paquete.  
+Yo probé mi función con mis datos de ejemplo, antes de incluirla en el paquete.  
 
 1. Mi función requiere el paquete **tidyr** 
 
@@ -607,7 +604,7 @@ Para agregar la función al paquete
 usethis::use_r("extract_pressure")
 ```
 
-*Abre un nuevo Rscript*
+**Abre un nuevo Rscript**  
 Pegue allí la función
 
 Me apareció
@@ -617,7 +614,8 @@ Me apareció
  Call `use_test()` to create a matching test file
 ```
 Ahora en mi carpeta **R** dentro del paquete aparece la función.  
-
+  
+  
 **Nota** te sugiere que uses use_test pero yo no hice este paso porque entra en conflicto con el siguiente.
 Si le diste use_test igual puedes usar rm() más adeltante.
 
@@ -667,13 +665,13 @@ Aunque creo que quedo pesado para leerse.
 #' Extracts pressure data from raw time and depth data/Extrae data de presion desde dispositivos TDR
 #'
 #' @param data is the raw data as imported from your device/son los datos crudos descargados de tu dispositivo
-#' @param row_start is the name of the row where the pressure data starts to be recorded/es la nombre de la fila donde empieza a tomar los datos de presion
-#' @param row_end is the name of the row where the pressure data finishes to be recorded/es la nombre de la fila donde termina de tomar los datos de presion
+#' @param row_start is the name of the row where the pressure data starts to be recorded/es el nombre de la fila donde empieza a tomar los datos de presion
+#' @param row_end is the name of the row where the pressure data finishes to be recorded/es el nombre de la fila donde termina de tomar los datos de presion
 #'
-#' @return it will return a object named TDR_pressure/agrega un objeto llamado TDR_pressure al environment
+#' @return it will return a object/te regresa un objeto
 #' @export
 #'
-#' @examples cut_rawdata(data=TDR_raw, row_start='Data Block 1', row_end = 'Data Block 2')
+#' @examples TDR_pressure&lt;-extract_pressure(data=TDR_raw, row_start='Data Block 1', row_end = 'Data Block 2')
 ```
 
 ---
@@ -700,7 +698,7 @@ Ahora si abres tu carpeta que dice **man** te aparece un documento rellenado.
 Ya puedes revisar tu documentación!
 
 ```r
-?cut_rawdata
+?extract_pressure
 ```
 
 ---
@@ -718,7 +716,7 @@ Si tu paquete tiene dependencias, apareceran errores, warnings y notas.
 
 Por ejemplo mi paquete tiene: 
 - un **%&gt;% (pipe)** del paquete **magrittr**, y 
-- usa la función **separate** que es del paquete **tidyr**.
+- usa la función **separate** que es del paquete **dplyr**.
 
 ---
 
@@ -825,22 +823,20 @@ name: segunda
 
 # 4. Función sin dependencias
 
-Cree una segunda funcion con datos de GPS.  
+Cree una segunda función con datos de GPS.  
 
 
 
 
 
 
-No obstante para esta función requiere que tengas una columna que se llame tStamp.  
-Para lo que estoy trabajando eso es normal, pero si no deberas crearla.  
-**Mi proposito** es agregar if else y usar corchetes para las variables.  
+No obstante para esta función requiere que tengas una columna que se llame tStamp (y aun no decido si eso es muy relevante para los demás).  
 
 ```r
 extract_trip&lt;-function(data=data,
-                   timeformat=timeformat,
-                   trip_start=row_start,
-                   trip_end=row_end){
+                   timeformat=t_format,
+                   trip_start=t_start,
+                   trip_end=t_end){
   data$daytime&lt;- as.POSIXct(strptime(as.character(data$tStamp), 
                                     timeformat), "GMT")
   trip_start&lt;-as.POSIXct(strptime(trip_start, timeformat), 'GMT')
@@ -864,13 +860,13 @@ Para agregar la función al paquete
 usethis::use_r("extract_trip")
 ```
 
-*Abre un nuevo Rscript*
+**Abre un nuevo script**  
 Pegue allí la función
 
 Me apareció: 
 
 ```r
-√ Setting active project to 'C:/Users/Lerma/Documents/5Proyectos/2Paquetes/spheniscus/spheniscus'
+√ Setting active project to 'C:/...'
  Modify 'R/extract_trip.R'
  Call `use_test()` to create a matching test file
 ```
@@ -882,11 +878,11 @@ Ahora en mi carpeta R tengo dentro la función
 
 ## 4.2. Documentar la funcion
 
-Para esta parte hay que crear un Roxigen skeleton.
-Para esto tienes que poner el cursor justo en la primera linea de la función.  
-Y te vas a la pestaña de Code&gt;Insert Reoxygen Skeleton (tambien funciona con Control+Alt+Shift+R).  
+Agregue un Roxigen skeleton.  
+Poniendo el cursor justo en la primera linea de la función. 
+Abriendo la pestaña de Code&gt;Insert Reoxygen Skeleton (también funciona con Control+Alt+Shift+R).  
 
-Va a aparecer algo asi:
+Va a aparecer algo así:
 
 ```r
 #' Title
@@ -929,16 +925,11 @@ Ya puedes revisar tu documentación!
 ?extract_trip
 ```
 
-```
-## No documentation for 'extract_trip' in specified packages and libraries:
-## you could try '??extract_trip'
-```
-
 ---
 
 ## 4.5. Dependencias
 
-Esta función no tiene nuevas dependencias, asi que no tuve que agregarlas.  
+Esta función no tiene nuevas dependencias, así que no tuve que agregarlas.  
 
 Revisar el paquete:
 
@@ -946,10 +937,10 @@ Revisar el paquete:
 devtools::check()
 ```
 
-*Problemas*: El ejemplo tiene mas de 100 characteres, es muy largo!.  
+Pero... **problemas**:  
+El ejemplo tiene mas de 100 characteres, es muy largo!.  
 
 ```r
-Rd file 'cut_trip.Rd':
     \examples lines wider than 100 characters:
        TDR_trip&lt;-cut_trip(data=TDR_pressure,timeformat="%d-%m-%Y %H:%M:%S",trip_start="30-11-2018 20:43:24",trip_end="01-12-2018 20:16:19")
 ```
@@ -971,16 +962,26 @@ Rd file 'cut_trip.Rd':
 
 ---
 
-name: sticker
+name: datos
+class: title-slide, center, middle
+background-image: url(https://images.unsplash.com/photo-1518289646039-3e6c87a5aaf6?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1351&amp;q=80)
+background-size: cover
 
-# Sticker
+&lt;span style=" font-weight: bold;    color: white !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #000000 !important;font-size: 120px;" &gt;Stickers&lt;/span&gt;
 
 ---
 
-## 5.1. Crear tu propio sticker
+## 5.0. Crear tu propio sticker
 
-- En powerpoint [Plantilla](https://emitanaka.org/posts/hexsticker/) &lt;br&gt;
-- En R [Paquete](https://github.com/GuangchuangYu/hexSticker)
+- En powerpoint [plantilla hecha por Emi Tanaka](https://emitanaka.org/posts/hexsticker/) &lt;br&gt;
+- En R [paquete hexSticker hecho por GuangchuangYu](https://github.com/GuangchuangYu/hexSticker)
+
+Para instalar:  
+
+```r
+install.packages("hexSticker")
+```
+
 
 ---
 
@@ -999,15 +1000,14 @@ class: inverse
 Para dudas, comentarios y sugerencias:&lt;br&gt;
  Escríbeme a miriamjlerma@gmail.com
 
-Este material esta accesible y se encuentra en &lt;br&gt;
+Este material esta accesible 
+y se encuentra en &lt;br&gt;
  mi [&lt;svg style="height:0.8em;top:.04em;position:relative;fill:#4cc9f0;" viewBox="0 0 576 512"&gt;&lt;path d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 0 0 384 303.765V448H64V128h264a24.003 24.003 0 0 0 16.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"/&gt;&lt;/svg&gt;github](https://github.com/MiriamLL/Curso_CIAD/)
-y mi [&lt;svg style="height:0.8em;top:.04em;position:relative;fill:#4cc9f0;" viewBox="0 0 576 512"&gt;&lt;path d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 0 0 384 303.765V448H64V128h264a24.003 24.003 0 0 0 16.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"/&gt;&lt;/svg&gt;página www.miriam-lerma.com](https://miriamlerma.netlify.app/materiales.html) 
 ]
 
-&lt;h1&gt;
-.center[
-[&lt;svg style="height:0.8em;top:.04em;position:relative;fill:#4cc9f0;" viewBox="0 0 576 512"&gt;&lt;path d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"/&gt;&lt;/svg&gt;](https://miriamlerma.netlify.app/materiales.html)
-]&lt;/h1&gt;
+
+
+
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
