Actualizar materiales, ggplot esta complicado

--- a/PackageDevelop.html
+++ b/PackageDevelop.html
@@ -543,6 +543,43 @@ TDR_raw&lt;-TDR_raw
 ```
 
 ---
+
+## 2.4. Ejercicios
+
+Agrega datos al paquete
+
+.panelset[
+.panel[.panel-name[Crear]
+
+```r
+save(TDR_raw, file="TDR_raw.rda")
+```
+]
+
+.panel[.panel-name[Documentar]
+
+
+```r
+usethis::use_r("TDR_raw")
+```
+
+Insertar Roxigen Skeleton  (CTRL+ALT+SHIFT+R) o copiar y pegar de otro archivo
+
+
+```r
+devtools::document()
+```
+]
+
+.panel[.panel-name[Checar]
+
+```r
+devtools::check()
+```
+]
+]
+
+---
 name: funciones
 class: title-slide, center, middle
 background-image: url(https://images.unsplash.com/photo-1518289646039-3e6c87a5aaf6?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1351&amp;q=80)
@@ -960,7 +997,58 @@ El ejemplo tiene mas de 100 characteres, es muy largo!.
 
 ---
 
-# 5. Ejercicios
+# 5. Funcion con ggplot
+
+Cuando creamos una funcion con ggplot hay que agregar en varias partes ggplot2::
+
+```r
+devtools::check()
+```
+
+Si no aparecera un error.
+
+```r
+1 error x | 0 warnings √ | 1 note x
+```
+
+Debido a que no detecta la funcion aes
+
+```r
+plot_depth: no visible global function definition for 'aes'
+```
+
+[ggplot en paquetes](https://ggplot2.tidyverse.org/articles/ggplot2-in-packages.html)
+
+---
+
+## 5.1. Funcion con ggplot
+
+
+```r
+checking R code for possible problems ...
+```
+
+
+Tambien tiene problemas con las variables
+
+```r
+plot_depth: no visible binding for global variable '.TDR_trip'
+```
+
+Por lo que hay que usar .data
+
+```r
+ggplot2::ggplot(data,
+                ggplot2::aes(x=.data[[depth_column]],
+                             y=.data[[time_column]]))+
+    ggplot2::geom_line()
+```
+
+
+
+---
+
+# 6. Ejercicios
 
 Crea tu propia funcion
 
@@ -1012,7 +1100,7 @@ background-size: cover
 &lt;span style=" font-weight: bold;    color: white !important;border-radius: 4px; padding-right: 4px; padding-left: 4px; background-color: #000000 !important;font-size: 120px;" &gt;Stickers&lt;/span&gt;
 
 
-# 6. Crear tu propio sticker
+# 7. Crear tu propio sticker
 
 - En powerpoint [plantilla hecha por Emi Tanaka](https://emitanaka.org/posts/hexsticker/) &lt;br&gt;
 - En R [paquete hexSticker hecho por GuangchuangYu](https://github.com/GuangchuangYu/hexSticker)
